--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       <h2>Experience</h2>
       <p>Former Product Researcher on Amazon</p>
       <h2>Skills</h2>
-      <p>Multi-tasking, Illustrating, Graphic Designing, Problem Solver,</p>
+      <ul>
+        <li>Multi-tasker</li>
+        <li>Problem Solver</li>
+        <li>Ilustrator</li>
+        <li>Good Communicator</li>
+      </ul>
       
     </body>
   </head>
