--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Online Resume</title>
     <body>
       <h1>Angelica Evangelista</h1>
+      <img src=Me.jpeg alt="Image" width="50" height="50">
       <p>Email: 202110434@btech.ph.education</p>
       <p>Phone: 09765098401</p>
       <h2>Education:</h2>
